# vivaldy

./: .gitattributes  .gitignore  CODEOWNERS  README.md  pip_requirements.txt  pyproject.toml  requirements.txt  setup.py
vivaldy/: __init__.py  main.py  vivaldy.py
